webhook/dev/manifests/cluster-config/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "simple-kubernetes-webhook.acme.com"
webhooks:
  - name: "simple-kubernetes-webhook.acme.com"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        # match all operations
        operations: ["CREATE", "UPDATE"]
        # match all resources
        resources: ["*"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: simple-kubernetes-webhook
        path: /tag-resource
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVQXduMUdkVUxVcWhr
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
